JRTB-6: FindNewPostsJob was debugged